<resources>
    <string name="app_name">Study</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_drawer1">Drawer 1</string>
    <string name="menu_drawer2">Drawer 2</string>
    <string name="menu_drawer3">Drawer 3</string>
    <string name="title_bottomnavigation1">bn1</string>
    <string name="title_bottomnavigation2">bn2</string>
    <string name="title_bottomnavigation3">bn3</string>
</resources>