<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer1"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_drawer1" />
        <item
            android:id="@+id/nav_drawer2"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_drawer2" />
        <item
            android:id="@+id/nav_drawer3"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_drawer3" />
    </group>
    <item android:title="Group 1">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_drawer4"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_drawer1" />
                <item
                    android:id="@+id/nav_drawer5"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_drawer2" />
            </group>
        </menu>
    </item>
    <item android:title="Group 2">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_drawer6"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_drawer3" />
            </group>
        </menu>
    </item>

</menu>